# rust-single

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs
