[package]
name = "single"
version = "0.2.1"
authors = ["CAD97 <cad97@cad97.com>"]
homepage = "https://github.com/CAD97/rust-single"
keywords = ["iterator", "single", "once", "only"]
license = "MIT/Apache-2.0"
repository = "https://github.com/CAD97/rust-single"
readme = "README.md"
description = """
Provides the Single trait for extracting the element from a \
single-element iterator.
"""

[badges]
travis-ci = { repository = "CAD97/rust-single" }

[dependencies]
quick-error = "1"
