[package]
name = "single"
version = "1.0.0"
authors = ["CAD97 <cad97@cad97.com>"]
homepage = "https://github.com/CAD97/rust-single"
keywords = ["iterator", "single", "once", "only"]
license = "MIT/Apache-2.0"
repository = "https://github.com/CAD97/rust-single"
readme = "README.md"
description = """
Provides the Single trait for extracting the element from a \
single-element iterator.
"""

[badges]
travis-ci = { repository = "CAD97/rust-single" }

is-it-maintained-issue-resolution = { repository = "CAD97/rust-single" }
is-it-maintained-open-issues = { repository = "CAD97/rust-single" }
maintenance = { status = "passively-maintained" }

[dependencies.failure]
version = "0.1"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = ["failure/std"]
