[package]
name = "single"
version = "1.0.1"
keywords = ["iterator", "single", "once", "only"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/CAD97/rust-single"
readme = "README.md"
description = """
Deprecated poor-man's version of Itertools::at_most_one
"""

[badges]
maintenance = { status = "deprecated" }

[dependencies.failure]
version = "0.1"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = ["failure/std"]
